--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".SplashActivity">
 
-   <!-- <ImageView
-        android:id="@+id/gifImageView"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="-5dp"
-        android:src="@drawable/logo_animation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
+    <!-- <ImageView
+         android:id="@+id/gifImageView"
+         android:layout_width="160dp"
+         android:layout_height="160dp"
+         android:layout_marginStart="-5dp"
+         android:src="@drawable/logo_animation"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toTopOf="parent" />-->
 
     <ImageView
         android:id="@+id/gifImageView2"
@@ -31,15 +31,21 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_bold"
+        android:shadowColor="#FF000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="4"
         android:text="Foodix"
         android:textColor="#FFEA4956"
-        android:textSize="30sp"
+        android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gifImageView2"
-        app:layout_constraintVertical_bias="0.757" />
+        app:layout_constraintVertical_bias="0.044" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
